==> aime4eve/hkt-iot/HKT-Firmwares/LoRaWAN_IAQ300/USER/Drive/tim.c <==
#include "tim.h"
#include "LoRaWAN_APPLY.h"
#include "communicate.h"
#include "control_center.h"
#include "gpio.h"
#include "multi_button.h"
#include "systick.h"
#include "uart.h"

void RTC_IRQHandler(void)
{
    if (RTC_ISR_ALARM_IF_Chk() == SET) // 查询闹钟钟断标志是否置起
    {
        /* Alarm callback */
        device_t.rtcWakeEvent = 1;
        if (device_t.sleepDelay < WAIT_SLEEP_TIME_DELAY)
            device_t.sleepDelay = WAIT_SLEEP_TIME_DELAY;
        uartLoRa.sendDelay = 3 * SEC_DELAY; // 唤醒后延时3秒发送数据，保证传感器全部转换完成
        RTC_ISR_ALARM_IF_Clr();             // 清除闹钟中断标志
    }
}

void RTC_Init(void)
{
    RTC_AlarmTmieTypeDef AlarmTime_InitStruct;
    CMU_PERCLK_SetableEx(RTCCLK, ENABLE); // RTC总线时钟使能
    RTC_VCAL_PR1SEN_Setable(DISABLE);     // 虚拟调校使能关闭

    RTC_TimeDateTypeDef rtc_date_initstruct = {0};
    rtc_date_initstruct.Year = RTC_CONVERT_BIN2BCD(systime.tm_year - 2000);
    rtc_date_initstruct.Month = RTC_CONVERT_BIN2BCD(systime.tm_mon + 1);
    rtc_date_initstruct.Date = RTC_CONVERT_BIN2BCD(systime.tm_mday);
    rtc_date_initstruct.Hour = RTC_CONVERT_BIN2BCD(systime.tm_hour);
    rtc_date_initstruct.Minute = RTC_CONVERT_BIN2BCD(systime.tm_min);
    rtc_date_initstruct.Second = RTC_CONVERT_BIN2BCD(systime.tm_sec);
    rtc_date_initstruct.Week = systime.tm_wday;
    RTC_SetRTC(&rtc_date_initstruct);

    RTC_CR_RTC_EN_Setable(ENABLE); // 使能RTC_A
    // RTC_ISR_SEC_IF_Clr();		//清除秒中断标志
    // RTC_IER_SEC_IE_Setable(ENABLE);//打开RTC秒中断

    NVIC_DisableIRQ(RTC_IRQn); // NVIC中断控制器配置
    NVIC_SetPriority(RTC_IRQn, 2);
    NVIC_EnableIRQ(RTC_IRQn);
}

void RTC_AlarmInit(RTC_AlarmTmieTypeDef *alarmTime)
{
    RTC_AlarmTmieTypeDef AlarmTime_InitStruct;
    CMU_PERCLK_SetableEx(RTCCLK, ENABLE); // RTC总线时钟使能
    RTC_VCAL_PR1SEN_Setable(DISABLE);     // 虚拟调校使能关闭

    AlarmTime_InitStruct.Hour = RTC_CONVERT_BIN2BCD(alarmTime->Hour);
    AlarmTime_InitStruct.Minute = RTC_CONVERT_BIN2BCD(alarmTime->Minute);
    AlarmTime_InitStruct.Second = RTC_CONVERT_BIN2BCD(alarmTime->Second);
    RTC_AlarmTime_SetEx(&AlarmTime_InitStruct); // 设置闹钟时间

    RTC_ISR_ALARM_IF_Clr();           // 清除闹钟中断标志
    RTC_IER_ALARM_IE_Setable(ENABLE); // 打开闹钟中断
    RTC_ALARM_ALMEN_Setable(ENABLE);  // 闹钟功能使能
    RTC_CR_RTC_EN_Setable(ENABLE);    // 使能RTC_A

    // RTC_ISR_SEC_IF_Clr();		//清除秒中断标志
    // RTC_IER_SEC_IE_Setable(ENABLE);//打开RTC秒中断

    // NVIC_DisableIRQ(RTC_IRQn); // NVIC中断控制器配置
    // NVIC_SetPriority(RTC_IRQn, 2);
    // NVIC_EnableIRQ(RTC_IRQn);

    DEBUG_TRACE(LOG_TAG, "Next Wake Up Time: %02d:%02d:%02d, Time Now: %04d-%02d-%02d:%02d:%02d:%02d, sensorConvertTimestamp: %d", alarmTime->Hour,
                alarmTime->Minute, alarmTime->Second, systime.tm_year, systime.tm_mon + 1, systime.tm_mday, systime.tm_hour, systime.tm_min,
                systime.tm_sec, sensorConvertTimestamp);
}

void sysTimeSwitchToRtcTime(void)
{
    RTC_TimeDateTypeDef rtcTime = {0};
    if (!RTC_GetRTC(&rtcTime)) {
        systime.tm_year = 2000 + RTC_CONVERT_BCD2BIN(rtcTime.Year);
        systime.tm_mon = RTC_CONVERT_BCD2BIN(rtcTime.Month) - 1;
        systime.tm_mday = RTC_CONVERT_BCD2BIN(rtcTime.Date);
        systime.tm_hour = RTC_CONVERT_BCD2BIN(rtcTime.Hour);
        systime.tm_min = RTC_CONVERT_BCD2BIN(rtcTime.Minute);
        systime.tm_sec = RTC_CONVERT_BCD2BIN(rtcTime.Second);
        systime.tm_wday = RTC_CONVERT_BCD2BIN(rtcTime.Week);

        getTimestamp();
        // DEBUG_TRACE(LOG_TAG, "Rtc To Systime Now :%04d-%02d-%02d:%02d:%02d:%02d, week: %02d, Timestamp :%ld", systime.tm_year, systime.tm_mon + 1,
        //             systime.tm_mday, systime.tm_hour, systime.tm_min, systime.tm_sec, systime.tm_wday, Timestamp);
    } else {
        DEBUG_TRACE(ERROR_TAG, "RTC Get RTC Time ERROR");
    }
}
